--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,10 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  http: ^0.11.3+16
+  http: ^0.12.0
+  flutter_staggered_grid_view: "^0.3.0"
+  youtube_player_flutter: ^6.0.3+2
+  transparent_image: ^1.0.0
   flutter:
     sdk: flutter
 
